Change source to resource, add severityCode and lastReceiveId

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -260,7 +260,7 @@
               Production - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
-              <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Source</th><th>Event</th><th>Value</th><th>Text</th></tr> 
+              <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
             </thead>
             <tbody id="R2-alerts" class="serviceAlerts">
             </tbody>
