--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -128,7 +128,7 @@
               Infrastructure - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
-              <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Source</th><th>Event</th><th>Value</th><th>Text</th></tr> 
+              <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
             </thead>
             <tbody id="Servers-alerts" class="serviceAlerts initially-hidden">
             </tbody>
