--- a/htdocs/code.html
+++ b/htdocs/code.html
@@ -55,15 +55,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="R2" data-label="R2">
               <thead>
-                <tr> <th colspan="6" id="CODE-R2-status">R2</th> </tr> 
+                <tr> <th colspan="6" id="R2-status">R2</th> </tr> 
               </thead>
               <tbody>
                 <tr id="R2-warnings" class="warnings">
-                  <td id="CODE-R2-critical">0</td>
-                  <td id="CODE-R2-major">0</td>
-                  <td id="CODE-R2-minor">0</td>
-                  <td id="CODE-R2-warning">0</td>
-                  <td id="CODE-R2-normal">0</td>
+                  <td id="R2-critical">0</td>
+                  <td id="R2-major">0</td>
+                  <td id="R2-minor">0</td>
+                  <td id="R2-warning">0</td>
+                  <td id="R2-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -71,15 +71,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Discussion" data-label="Discussion">
               <thead>
-                <tr> <th colspan="6" id="CODE-Discussion-status">Discussion</th> </tr> 
+                <tr> <th colspan="6" id="Discussion-status">Discussion</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Discussion-warnings" class="warnings">
-                  <td id="CODE-Discussion-critical">0</td>
-                  <td id="CODE-Discussion-major">0</td>
-                  <td id="CODE-Discussion-minor">0</td>
-                  <td id="CODE-Discussion-warning">0</td>
-                  <td id="CODE-Discussion-normal">0</td>
+                  <td id="Discussion-critical">0</td>
+                  <td id="Discussion-major">0</td>
+                  <td id="Discussion-minor">0</td>
+                  <td id="Discussion-warning">0</td>
+                  <td id="Discussion-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -87,15 +87,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="ContentAPI" data-label="Content API">
               <thead>
-                <tr> <th colspan="6" id="CODE-ContentAPI-status">Content API</th> </tr> 
+                <tr> <th colspan="6" id="ContentAPI-status">Content API</th> </tr> 
               </thead>
               <tbody>
                 <tr id="ContentAPI-warnings" class="warnings">
-                  <td id="CODE-ContentAPI-critical">0</td>
-                  <td id="CODE-ContentAPI-major">0</td>
-                  <td id="CODE-ContentAPI-minor">0</td>
-                  <td id="CODE-ContentAPI-warning">0</td>
-                  <td id="CODE-ContentAPI-normal">0</td>
+                  <td id="ContentAPI-critical">0</td>
+                  <td id="ContentAPI-major">0</td>
+                  <td id="ContentAPI-minor">0</td>
+                  <td id="ContentAPI-warning">0</td>
+                  <td id="ContentAPI-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -103,15 +103,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Identity" data-label="Identity">
               <thead>
-                <tr> <th colspan="6" id="CODE-Identity-status">Identity</th> </tr> 
+                <tr> <th colspan="6" id="Identity-status">Identity</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Identity-warnings" class="warnings">
-                  <td id="CODE-Identity-critical">0</td>
-                  <td id="CODE-Identity-major">0</td>
-                  <td id="CODE-Identity-minor">0</td>
-                  <td id="CODE-Identity-warning">0</td>
-                  <td id="CODE-Identity-normal">0</td>
+                  <td id="Identity-critical">0</td>
+                  <td id="Identity-major">0</td>
+                  <td id="Identity-minor">0</td>
+                  <td id="Identity-warning">0</td>
+                  <td id="Identity-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -121,15 +121,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="R1" data-label="R1">
               <thead>
-                <tr> <th colspan="6" id="CODE-R1-status">R1</th> </tr> 
+                <tr> <th colspan="6" id="R1-status">R1</th> </tr> 
               </thead>
               <tbody>
                 <tr id="R1-warnings" class="warnings">
-                  <td id="CODE-R1-critical">0</td>
-                  <td id="CODE-R1-major">0</td>
-                  <td id="CODE-R1-minor">0</td>
-                  <td id="CODE-R1-warning">0</td>
-                  <td id="CODE-R1-normal">0</td>
+                  <td id="R1-critical">0</td>
+                  <td id="R1-major">0</td>
+                  <td id="R1-minor">0</td>
+                  <td id="R1-warning">0</td>
+                  <td id="R1-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -137,15 +137,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="FlexibleContent" data-label="Flexible Content">
               <thead>
-                <tr> <th colspan="6" id="CODE-FlexibleContent-status">Flexible Content</th> </tr> 
+                <tr> <th colspan="6" id="FlexibleContent-status">Flexible Content</th> </tr> 
               </thead>
               <tbody>
                 <tr id="FlexibleContent-warnings" class="warnings">
-                  <td id="CODE-FlexibleContent-critical">0</td>
-                  <td id="CODE-FlexibleContent-major">0</td>
-                  <td id="CODE-FlexibleContent-minor">0</td>
-                  <td id="CODE-FlexibleContent-warning">0</td>
-                  <td id="CODE-FlexibleContent-normal">0</td>
+                  <td id="FlexibleContent-critical">0</td>
+                  <td id="FlexibleContent-major">0</td>
+                  <td id="FlexibleContent-minor">0</td>
+                  <td id="FlexibleContent-warning">0</td>
+                  <td id="FlexibleContent-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -153,15 +153,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Soulmates" data-label="Soulmates">
               <thead>
-                <tr> <th colspan="6" id="CODE-Soulmates-status">Soulmates</th> </tr> 
+                <tr> <th colspan="6" id="Soulmates-status">Soulmates</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Soulmates-warnings" class="warnings">
-                  <td id="CODE-Soulmates-critical">0</td>
-                  <td id="CODE-Soulmates-major">0</td>
-                  <td id="CODE-Soulmates-minor">0</td>
-                  <td id="CODE-Soulmates-warning">0</td>
-                  <td id="CODE-Soulmates-normal">0</td>
+                  <td id="Soulmates-critical">0</td>
+                  <td id="Soulmates-major">0</td>
+                  <td id="Soulmates-minor">0</td>
+                  <td id="Soulmates-warning">0</td>
+                  <td id="Soulmates-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -169,15 +169,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="SharedSvcs" data-label="Shared Services">
               <thead>
-                <tr> <th colspan="6" id="CODE-SharedSvcs-status">Shared Services</th> </tr> 
+                <tr> <th colspan="6" id="SharedSvcs-status">Shared Services</th> </tr> 
               </thead>
               <tbody>
                 <tr id="SharedSvcs-warnings" class="warnings">
-                  <td id="CODE-SharedSvcs-critical">0</td>
-                  <td id="CODE-SharedSvcs-major">0</td>
-                  <td id="CODE-SharedSvcs-minor">0</td>
-                  <td id="CODE-SharedSvcs-warning">0</td>
-                  <td id="CODE-SharedSvcs-normal">0</td>
+                  <td id="SharedSvcs-critical">0</td>
+                  <td id="SharedSvcs-major">0</td>
+                  <td id="SharedSvcs-minor">0</td>
+                  <td id="SharedSvcs-warning">0</td>
+                  <td id="SharedSvcs-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -187,15 +187,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="MicroApp" data-label="MicroApp">
               <thead>
-                <tr> <th colspan="6" id="CODE-MicroApp-status">Micro App</th> </tr> 
+                <tr> <th colspan="6" id="MicroApp-status">Micro App</th> </tr> 
               </thead>
               <tbody>
                 <tr id="MicroApp-warnings" class="warnings">
-                  <td id="CODE-MicroApp-critical">0</td>
-                  <td id="CODE-MicroApp-major">0</td>
-                  <td id="CODE-MicroApp-minor">0</td>
-                  <td id="CODE-MicroApp-warning">0</td>
-                  <td id="CODE-MicroApp-normal">0</td>
+                  <td id="MicroApp-critical">0</td>
+                  <td id="MicroApp-major">0</td>
+                  <td id="MicroApp-minor">0</td>
+                  <td id="MicroApp-warning">0</td>
+                  <td id="MicroApp-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -203,15 +203,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Mutualisation" data-label="Mutualisation">
               <thead>
-                <tr> <th colspan="6" id="CODE-Mutualisation-status">Mutualisation</th> </tr> 
+                <tr> <th colspan="6" id="Mutualisation-status">Mutualisation</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Mutualisation-warnings" class="warnings">
-                  <td id="CODE-Mutualisation-critical">0</td>
-                  <td id="CODE-Mutualisation-major">0</td>
-                  <td id="CODE-Mutualisation-minor">0</td>
-                  <td id="CODE-Mutualisation-warning">0</td>
-                  <td id="CODE-Mutualisation-normal">0</td>
+                  <td id="Mutualisation-critical">0</td>
+                  <td id="Mutualisation-major">0</td>
+                  <td id="Mutualisation-minor">0</td>
+                  <td id="Mutualisation-warning">0</td>
+                  <td id="Mutualisation-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -219,15 +219,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="EC2" data-label="EC2">
               <thead>
-                <tr> <th colspan="6" id="CODE-EC2-status">EC2 Servers</th> </tr> 
+                <tr> <th colspan="6" id="EC2-status">EC2 Servers</th> </tr> 
               </thead>
               <tbody>
                 <tr id="EC2-warnings" class="warnings">
-                  <td id="CODE-EC2-critical">0</td>
-                  <td id="CODE-EC2-major">0</td>
-                  <td id="CODE-EC2-minor">0</td>
-                  <td id="CODE-EC2-warning">0</td>
-                  <td id="CODE-EC2-normal">0</td>
+                  <td id="EC2-critical">0</td>
+                  <td id="EC2-major">0</td>
+                  <td id="EC2-minor">0</td>
+                  <td id="EC2-warning">0</td>
+                  <td id="EC2-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -235,15 +235,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Network" data-label="Network">
               <thead>
-                <tr> <th colspan="6" id="CODE-Network-status">Network</th> </tr> 
+                <tr> <th colspan="6" id="Network-status">Network</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Network-warnings" class="warnings">
-                  <td id="CODE-Network-critical">0</td>
-                  <td id="CODE-Network-major">0</td>
-                  <td id="CODE-Network-minor">0</td>
-                  <td id="CODE-Network-warning">0</td>
-                  <td id="CODE-Network-normal">0</td>
+                  <td id="Network-critical">0</td>
+                  <td id="Network-major">0</td>
+                  <td id="Network-minor">0</td>
+                  <td id="Network-warning">0</td>
+                  <td id="Network-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -257,7 +257,7 @@
         <div class="span12">
           <table class="table table-bordered table-condensed" id="alert-details">
             <caption class="alerts-caption">
-              Code - <span id="alert-details-caption">R2</span> alert details
+              Production - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
               <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
@@ -298,17 +298,27 @@
     <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/console.js"></script>
 
-
     <script>
       $(document).ready(function() {
 
-        var services = ['R2', 'Discussion', 'ContentAPI', 'Identity', 'R1', 'FlexibleContent', 'Soulmates', 'SharedSvcs', 'MicroApp', 'Mutualisation', 'EC2', 'Network'],
-            env = "CODE";
+        var env = "CODE";
+        var services = { 'R2':              'environment='+env+'&service=R2',
+                         'Discussion':      'environment='+env+'&service=Discussion',
+                         'ContentAPI':      'environment='+env+'&service=ContentAPI',
+                         'Identity':        'environment='+env+'&service=Identity',
+                         'R1':              'environment='+env+'&service=R1',
+                         'FlexibleContent': 'environment='+env+'&service=FlexibleContent',
+                         'Soulmates':       'environment='+env+'&service=Soulmates',
+                         'SharedSvcs':      'environment='+env+'&service=SharedSvcs',
+                         'MicroApp':        'environment='+env+'&service=MicroApp',
+                         'Mutualisation':   'environment='+env+'&service=Mutualisation',
+                         'EC2':             'environment='+env+'&service=EC2',
+                         'Network':         'environment='+env+'&service=Nework' };
 
-        loadAlerts(services, env, true);
+        loadAlerts(services, true);
 
         $('#refresh-all').click(function() {
-          loadAlerts(services, env, false)
+          loadAlerts(services, false)
         });
       });
     </script>
