--- a/htdocs/test.html
+++ b/htdocs/test.html
@@ -25,8 +25,8 @@
             <ul class="nav">
               <li class=""><a href="./index.html">Production</a></li>
               <li class=""><a href="./release.html">Release</a></li>
-              <li class=""><a href="./qa.html">QA</a></li>
-              <li class="active"><a href="./test.html">Test</a></li>
+              <li class="active"><a href="./qa.html">QA</a></li>
+              <li class=""><a href="./test.html">Test</a></li>
               <li class=""><a href="./code.html">Code</a></li>
               <li class=""><a href="./dev.html">Development</a></li>
               <li class=""><a href="./stage.html">Stage</a></li>
@@ -55,15 +55,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="R2" data-label="R2">
               <thead>
-                <tr> <th colspan="6" id="TEST-R2-status">R2</th> </tr> 
+                <tr> <th colspan="6" id="R2-status">R2</th> </tr> 
               </thead>
               <tbody>
                 <tr id="R2-warnings" class="warnings">
-                  <td id="TEST-R2-critical">0</td>
-                  <td id="TEST-R2-major">0</td>
-                  <td id="TEST-R2-minor">0</td>
-                  <td id="TEST-R2-warning">0</td>
-                  <td id="TEST-R2-normal">0</td>
+                  <td id="R2-critical">0</td>
+                  <td id="R2-major">0</td>
+                  <td id="R2-minor">0</td>
+                  <td id="R2-warning">0</td>
+                  <td id="R2-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -71,15 +71,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Discussion" data-label="Discussion">
               <thead>
-                <tr> <th colspan="6" id="TEST-Discussion-status">Discussion</th> </tr> 
+                <tr> <th colspan="6" id="Discussion-status">Discussion</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Discussion-warnings" class="warnings">
-                  <td id="TEST-Discussion-critical">0</td>
-                  <td id="TEST-Discussion-major">0</td>
-                  <td id="TEST-Discussion-minor">0</td>
-                  <td id="TEST-Discussion-warning">0</td>
-                  <td id="TEST-Discussion-normal">0</td>
+                  <td id="Discussion-critical">0</td>
+                  <td id="Discussion-major">0</td>
+                  <td id="Discussion-minor">0</td>
+                  <td id="Discussion-warning">0</td>
+                  <td id="Discussion-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -87,15 +87,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="ContentAPI" data-label="Content API">
               <thead>
-                <tr> <th colspan="6" id="TEST-ContentAPI-status">Content API</th> </tr> 
+                <tr> <th colspan="6" id="ContentAPI-status">Content API</th> </tr> 
               </thead>
               <tbody>
                 <tr id="ContentAPI-warnings" class="warnings">
-                  <td id="TEST-ContentAPI-critical">0</td>
-                  <td id="TEST-ContentAPI-major">0</td>
-                  <td id="TEST-ContentAPI-minor">0</td>
-                  <td id="TEST-ContentAPI-warning">0</td>
-                  <td id="TEST-ContentAPI-normal">0</td>
+                  <td id="ContentAPI-critical">0</td>
+                  <td id="ContentAPI-major">0</td>
+                  <td id="ContentAPI-minor">0</td>
+                  <td id="ContentAPI-warning">0</td>
+                  <td id="ContentAPI-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -103,15 +103,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Identity" data-label="Identity">
               <thead>
-                <tr> <th colspan="6" id="TEST-Identity-status">Identity</th> </tr> 
+                <tr> <th colspan="6" id="Identity-status">Identity</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Identity-warnings" class="warnings">
-                  <td id="TEST-Identity-critical">0</td>
-                  <td id="TEST-Identity-major">0</td>
-                  <td id="TEST-Identity-minor">0</td>
-                  <td id="TEST-Identity-warning">0</td>
-                  <td id="TEST-Identity-normal">0</td>
+                  <td id="Identity-critical">0</td>
+                  <td id="Identity-major">0</td>
+                  <td id="Identity-minor">0</td>
+                  <td id="Identity-warning">0</td>
+                  <td id="Identity-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -121,15 +121,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="R1" data-label="R1">
               <thead>
-                <tr> <th colspan="6" id="TEST-R1-status">R1</th> </tr> 
+                <tr> <th colspan="6" id="R1-status">R1</th> </tr> 
               </thead>
               <tbody>
                 <tr id="R1-warnings" class="warnings">
-                  <td id="TEST-R1-critical">0</td>
-                  <td id="TEST-R1-major">0</td>
-                  <td id="TEST-R1-minor">0</td>
-                  <td id="TEST-R1-warning">0</td>
-                  <td id="TEST-R1-normal">0</td>
+                  <td id="R1-critical">0</td>
+                  <td id="R1-major">0</td>
+                  <td id="R1-minor">0</td>
+                  <td id="R1-warning">0</td>
+                  <td id="R1-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -137,15 +137,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="FlexibleContent" data-label="Flexible Content">
               <thead>
-                <tr> <th colspan="6" id="TEST-FlexibleContent-status">Flexible Content</th> </tr> 
+                <tr> <th colspan="6" id="FlexibleContent-status">Flexible Content</th> </tr> 
               </thead>
               <tbody>
                 <tr id="FlexibleContent-warnings" class="warnings">
-                  <td id="TEST-FlexibleContent-critical">0</td>
-                  <td id="TEST-FlexibleContent-major">0</td>
-                  <td id="TEST-FlexibleContent-minor">0</td>
-                  <td id="TEST-FlexibleContent-warning">0</td>
-                  <td id="TEST-FlexibleContent-normal">0</td>
+                  <td id="FlexibleContent-critical">0</td>
+                  <td id="FlexibleContent-major">0</td>
+                  <td id="FlexibleContent-minor">0</td>
+                  <td id="FlexibleContent-warning">0</td>
+                  <td id="FlexibleContent-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -153,15 +153,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Soulmates" data-label="Soulmates">
               <thead>
-                <tr> <th colspan="6" id="TEST-Soulmates-status">Soulmates</th> </tr> 
+                <tr> <th colspan="6" id="Soulmates-status">Soulmates</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Soulmates-warnings" class="warnings">
-                  <td id="TEST-Soulmates-critical">0</td>
-                  <td id="TEST-Soulmates-major">0</td>
-                  <td id="TEST-Soulmates-minor">0</td>
-                  <td id="TEST-Soulmates-warning">0</td>
-                  <td id="TEST-Soulmates-normal">0</td>
+                  <td id="Soulmates-critical">0</td>
+                  <td id="Soulmates-major">0</td>
+                  <td id="Soulmates-minor">0</td>
+                  <td id="Soulmates-warning">0</td>
+                  <td id="Soulmates-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -169,15 +169,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="SharedSvcs" data-label="Shared Services">
               <thead>
-                <tr> <th colspan="6" id="TEST-SharedSvcs-status">Shared Services</th> </tr> 
+                <tr> <th colspan="6" id="SharedSvcs-status">Shared Services</th> </tr> 
               </thead>
               <tbody>
                 <tr id="SharedSvcs-warnings" class="warnings">
-                  <td id="TEST-SharedSvcs-critical">0</td>
-                  <td id="TEST-SharedSvcs-major">0</td>
-                  <td id="TEST-SharedSvcs-minor">0</td>
-                  <td id="TEST-SharedSvcs-warning">0</td>
-                  <td id="TEST-SharedSvcs-normal">0</td>
+                  <td id="SharedSvcs-critical">0</td>
+                  <td id="SharedSvcs-major">0</td>
+                  <td id="SharedSvcs-minor">0</td>
+                  <td id="SharedSvcs-warning">0</td>
+                  <td id="SharedSvcs-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -187,15 +187,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="MicroApp" data-label="MicroApp">
               <thead>
-                <tr> <th colspan="6" id="TEST-MicroApp-status">Micro App</th> </tr> 
+                <tr> <th colspan="6" id="MicroApp-status">Micro App</th> </tr> 
               </thead>
               <tbody>
                 <tr id="MicroApp-warnings" class="warnings">
-                  <td id="TEST-MicroApp-critical">0</td>
-                  <td id="TEST-MicroApp-major">0</td>
-                  <td id="TEST-MicroApp-minor">0</td>
-                  <td id="TEST-MicroApp-warning">0</td>
-                  <td id="TEST-MicroApp-normal">0</td>
+                  <td id="MicroApp-critical">0</td>
+                  <td id="MicroApp-major">0</td>
+                  <td id="MicroApp-minor">0</td>
+                  <td id="MicroApp-warning">0</td>
+                  <td id="MicroApp-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -203,15 +203,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Mutualisation" data-label="Mutualisation">
               <thead>
-                <tr> <th colspan="6" id="TEST-Mutualisation-status">Mutualisation</th> </tr> 
+                <tr> <th colspan="6" id="Mutualisation-status">Mutualisation</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Mutualisation-warnings" class="warnings">
-                  <td id="TEST-Mutualisation-critical">0</td>
-                  <td id="TEST-Mutualisation-major">0</td>
-                  <td id="TEST-Mutualisation-minor">0</td>
-                  <td id="TEST-Mutualisation-warning">0</td>
-                  <td id="TEST-Mutualisation-normal">0</td>
+                  <td id="Mutualisation-critical">0</td>
+                  <td id="Mutualisation-major">0</td>
+                  <td id="Mutualisation-minor">0</td>
+                  <td id="Mutualisation-warning">0</td>
+                  <td id="Mutualisation-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -219,15 +219,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="EC2" data-label="EC2">
               <thead>
-                <tr> <th colspan="6" id="TEST-EC2-status">EC2 Servers</th> </tr> 
+                <tr> <th colspan="6" id="EC2-status">EC2 Servers</th> </tr> 
               </thead>
               <tbody>
                 <tr id="EC2-warnings" class="warnings">
-                  <td id="TEST-EC2-critical">0</td>
-                  <td id="TEST-EC2-major">0</td>
-                  <td id="TEST-EC2-minor">0</td>
-                  <td id="TEST-EC2-warning">0</td>
-                  <td id="TEST-EC2-normal">0</td>
+                  <td id="EC2-critical">0</td>
+                  <td id="EC2-major">0</td>
+                  <td id="EC2-minor">0</td>
+                  <td id="EC2-warning">0</td>
+                  <td id="EC2-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -235,15 +235,15 @@
           <div class="span3">
             <table class="table table-bordered table-condensed summary" id="Network" data-label="Network">
               <thead>
-                <tr> <th colspan="6" id="TEST-Network-status">Network</th> </tr> 
+                <tr> <th colspan="6" id="Network-status">Network</th> </tr> 
               </thead>
               <tbody>
                 <tr id="Network-warnings" class="warnings">
-                  <td id="TEST-Network-critical">0</td>
-                  <td id="TEST-Network-major">0</td>
-                  <td id="TEST-Network-minor">0</td>
-                  <td id="TEST-Network-warning">0</td>
-                  <td id="TEST-Network-normal">0</td>
+                  <td id="Network-critical">0</td>
+                  <td id="Network-major">0</td>
+                  <td id="Network-minor">0</td>
+                  <td id="Network-warning">0</td>
+                  <td id="Network-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -257,7 +257,7 @@
         <div class="span12">
           <table class="table table-bordered table-condensed" id="alert-details">
             <caption class="alerts-caption">
-              Test - <span id="alert-details-caption">R2</span> alert details
+              Production - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
               <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
@@ -301,13 +301,24 @@
     <script>
       $(document).ready(function() {
 
-        var services = ['R2', 'Discussion', 'ContentAPI', 'Identity', 'R1', 'FlexibleContent', 'Soulmates', 'SharedSvcs', 'MicroApp', 'Mutualisation', 'EC2', 'Network'],
-            env = "TEST";
+        var env = "TEST";
+        var services = { 'R2':              'environment='+env+'&service=R2',
+                         'Discussion':      'environment='+env+'&service=Discussion',
+                         'ContentAPI':      'environment='+env+'&service=ContentAPI',
+                         'Identity':        'environment='+env+'&service=Identity',
+                         'R1':              'environment='+env+'&service=R1',
+                         'FlexibleContent': 'environment='+env+'&service=FlexibleContent',
+                         'Soulmates':       'environment='+env+'&service=Soulmates',
+                         'SharedSvcs':      'environment='+env+'&service=SharedSvcs',
+                         'MicroApp':        'environment='+env+'&service=MicroApp',
+                         'Mutualisation':   'environment='+env+'&service=Mutualisation',
+                         'EC2':             'environment='+env+'&service=EC2',
+                         'Network':         'environment='+env+'&service=Nework' };
 
-        loadAlerts(services, env, true);
+        loadAlerts(services, true);
 
         $('#refresh-all').click(function() {
-          loadAlerts(services, env, false)
+          loadAlerts(services, false)
         });
       });
     </script>
