Fix environment name missed in last commit

--- a/htdocs/test.html
+++ b/htdocs/test.html
@@ -25,8 +25,8 @@
             <ul class="nav">
               <li class=""><a href="./index.html">Production</a></li>
               <li class=""><a href="./release.html">Release</a></li>
-              <li class="active"><a href="./qa.html">QA</a></li>
-              <li class=""><a href="./test.html">Test</a></li>
+              <li class=""><a href="./qa.html">QA</a></li>
+              <li class="active"><a href="./test.html">Test</a></li>
               <li class=""><a href="./code.html">Code</a></li>
               <li class=""><a href="./dev.html">Development</a></li>
               <li class=""><a href="./stage.html">Stage</a></li>
@@ -257,7 +257,7 @@
         <div class="span12">
           <table class="table table-bordered table-condensed" id="alert-details">
             <caption class="alerts-caption">
-              Production - <span id="alert-details-caption">R2</span> alert details
+              Test - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
               <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
