--- a/htdocs/code.html
+++ b/htdocs/code.html
@@ -257,7 +257,7 @@
         <div class="span12">
           <table class="table table-bordered table-condensed" id="alert-details">
             <caption class="alerts-caption">
-              Production - <span id="alert-details-caption">R2</span> alert details
+              Code - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
               <tr> <th></th><th>Severity</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr> 
