Alert treemap fixes

--- a/htdocs/treemap.html
+++ b/htdocs/treemap.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Alert Console</title>
+    <title>Alert Treemap</title>
 
-    <link type="text/css" rel="stylesheet" href="treemap/treemap.css"/>
-    <link type="text/css" rel="stylesheet" href="../button.css"/>
+    <link href="css/treemap.css" rel="stylesheet">
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/docs.css" rel="stylesheet">
-    <script type="text/javascript" src="../../assets/js/d3.v2.js"></script>
+    <script src="js/d3.v2.js"></script>
   </head>
 
   <body>
@@ -63,8 +62,7 @@
       <!-- end Alert Details -->
 
     </div> <!-- end container -->
-    <script type="text/javascript" src="treemap/treemap.js"></script>
-    <!-- script src="js/bootstrap.js"></script -->
+    <script src="js/treemap.js"></script>
 
   </body>
 </html>
