--- a/htdocs/release.html
+++ b/htdocs/release.html
@@ -313,7 +313,7 @@
                          'MicroApp':        'environment='+env+'&service=MicroApp',
                          'Mutualisation':   'environment='+env+'&service=Mutualisation',
                          'EC2':             'environment='+env+'&service=EC2',
-                         'Network':         'environment='+env+'&service=Nework' };
+                         'Network':         'environment='+env+'&service=Network' };
 
         loadAlerts(services, true);
 
