--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -42,6 +42,7 @@
     <div class="container">
       
       <div align="right">
+        <button class="btn" id="toggle-INACTIVE" class="toggle-INACTIVE"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Inactives</button>
         <button class="btn" id="toggle-NORMAL" class="toggle-NORMAL"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Normals</button>
         <!-- button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i> Refresh</button -->
         <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i> Refresh Now</button>
