--- a/htdocs/stage.html
+++ b/htdocs/stage.html
@@ -29,6 +29,7 @@
               <li class=""><a href="./code.html">Code</a></li>
               <li class=""><a href="./dev.html">Development</a></li>
               <li class="active"><a href="./stage.html">Stage</a></li>
+              <li class=""><a href="./lwp.html">LWP</a></li>
               <li class=""><a href="./infra.html">Infrastructure</a></li>
               <li class=""><a href="./treemap.html">Treemap</a></li>
               <li class=""><a href="/Kibana">History</a></li>
